--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.10"
   },
@@ -19,8 +21,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
-"devDependencies": {
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
-
 }
